--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   },
   "author": "",
   "license": "ISC",
+  "engine": "18.18.0",
   "dependencies": {
     "axios": "^1.4.0",
     "concurrently": "^8.0.1",
